--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
 <head>
   <meta>
-  <meta name="description" content="Your description goes here">
+  <meta name="Relaxr blog" content="Relaxr website">
   <meta name="keywords" content="one, two, three">
 <title>Relaxr blog</title>
 <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i" rel="stylesheet">
-
+<link rel="reset" href="css/reset">
 <link rel="stylesheet" type="text/css" href="css/style.css">
 
 </head>
@@ -15,7 +15,7 @@
 <h1 class="logo">Relaxr</h1>
 <nav>
 	<ul>
-		<li><a href="#"></a>About</li>
+		<li><a href="index.html"></a>About</li>
 		<li><a href="#"></a>FAQ</li>
 		<li><a href="#"></a>Team</li>
 		<li><a href="#"></a>Contact Us</li>
@@ -49,6 +49,7 @@
 
 	</article>
 
+</section>
 
 <aside class="right">
 	<ul class="categories">
@@ -65,8 +66,7 @@
 	</div>
 	<img src="images/ad-unit.png">
 
-	</aside>
-</section>
+</aside>
 
 <aside id="cta">
 	<a class="button blue" href="#">Sign Up Now!</a>
